# MC-dashboard

./: Cargo.toml
src/: conf.rs  live_data.rs  main.rs
templates/: index.html  login.html
