[package]
name = "mc-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
msp = {version = "0.1.2", path = "../msp"}
config = "0.15"

serde = { version = "1", features = ["derive"]}
serde_json = "1"

toml = "0.8"
axum = {version = "0.8", features = ["macros", "ws"]}
tera = "1.20"
tokio = { version = "1", features = ["full"] }

