[package]
name = "mc-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
msp = {version = "0.1.2", path = "../msp"}
config = "0.15"

serde = { version = "1", features = ["derive"]}
serde_json = "1"

toml = "0.8"
axum = {version = "0.8", features = ["macros", "ws"]}
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
dotenvy = "0.15"
regex = "1.11"
num_cpus = "1.16"
notify = "8"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] } # For password hashing
chrono = { version = "0.4", features = ["serde"] } # For JWT expiration timestamps
tower-http = { version = "0.6", features = ["cors"] } # For CORS middleware
headers = "0.4" # For Authorization header extraction
axum-macros = "0.5" # For FromRequestParts derive (optional but convenient)
rand = "0.9" # Needed by argon2
base64 = "0.22" # Often useful with secrets/keys
sha2 = "0.10"
async-trait = "0.1"
